# rustyteams

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  claude.md  installer.nsi
.github/workflows/: ci.yml  release.yml
resources/: rustyteams.desktop  rustyteams.exe.manifest  rustyteams.sh
src/: app.rs  browser.rs  config.rs  external.rs  main.rs  notifications.rs  tray.rs
src/handlers/: display.rs  download.rs  keyboard.rs  life_span.rs  mod.rs  permission.rs  render_process.rs  request.rs
