[package]
name = "rustyteams"
version = "0.1.0"
edition = "2021"
description = "Lightweight CEF-based desktop wrapper for Microsoft Teams"
license = "MIT"

[[bin]]
name = "rustyteams"
path = "src/main.rs"

[dependencies]
cef = { version = "146.7", default-features = false }
dirs = "5"
tray-icon = "0.19"
rfd = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
] }
winrt-notification = "0.5"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
