[package]
name = "rustyteams"
version = "0.1.0"
edition = "2021"
description = "Lightweight CEF-based desktop wrapper for Microsoft Teams"
license = "MIT"

[[bin]]
name = "rustyteams"
path = "src/main.rs"

[dependencies]
cef = { version = "146.7", default-features = false }
dirs = "5"
tray-icon = "0.19"
rfd = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
] }
winrt-notification = "0.5"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

# --- Debian packaging ------------------------------------------------------
# Consumed by `cargo deb --no-build` (invoked via `make deb` / release.yml).
# The release Makefile's _sync-runtime-release target copies libcef.so + CEF
# resources into target/release/ alongside the exe before cargo-deb runs, so
# the globs below resolve to real files.
[package.metadata.deb]
name = "rustyteams"
maintainer = "alexieff <noreply@alexieff.io>"
copyright = "2026, alexieff"
license-file = ["LICENSE", "0"]
extended-description = """\
Lightweight CEF-based desktop wrapper for Microsoft Teams web. Runs Teams in \
a standalone Chromium window with persistent sessions, native notifications, \
and a system tray icon — without pulling in Electron."""
section = "net"
priority = "optional"
depends = "$auto, libgtk-3-0, libayatana-appindicator3-1, libnss3, libatk1.0-0, libatk-bridge2.0-0, libdrm2, libxkbcommon0, libxcomposite1, libxdamage1, libxfixes3, libxrandr2, libgbm1, libasound2t64 | libasound2, libcups2, libxshmfence1, libpango-1.0-0, libxdo3"
assets = [
    # Binary + CEF runtime, colocated under /opt/rustyteams/.
    ["target/release/rustyteams", "opt/rustyteams/rustyteams", "755"],
    ["target/release/libcef.so", "opt/rustyteams/", "755"],
    ["target/release/libEGL.so", "opt/rustyteams/", "755"],
    ["target/release/libGLESv2.so", "opt/rustyteams/", "755"],
    ["target/release/libvk_swiftshader.so", "opt/rustyteams/", "755"],
    ["target/release/libvulkan.so.1", "opt/rustyteams/", "755"],
    ["target/release/vk_swiftshader_icd.json", "opt/rustyteams/", "644"],
    # Setuid-root so CEF's sandbox works. dpkg preserves 4755 on install.
    ["target/release/chrome-sandbox", "opt/rustyteams/", "4755"],
    ["target/release/icudtl.dat", "opt/rustyteams/", "644"],
    ["target/release/chrome_100_percent.pak", "opt/rustyteams/", "644"],
    ["target/release/chrome_200_percent.pak", "opt/rustyteams/", "644"],
    ["target/release/resources.pak", "opt/rustyteams/", "644"],
    # Globbed: CEF 146 ships v8_context_snapshot.bin; older/newer drops may
    # also include snapshot_blob.bin. Match whatever Makefile synced.
    ["target/release/*.bin", "opt/rustyteams/", "644"],
    ["target/release/locales/*.pak", "opt/rustyteams/locales/", "644"],
    # Launcher + desktop integration.
    ["resources/rustyteams.sh", "usr/bin/rustyteams", "755"],
    ["resources/rustyteams.desktop", "usr/share/applications/rustyteams.desktop", "644"],
    ["resources/icon-256.png", "usr/share/icons/hicolor/256x256/apps/rustyteams.png", "644"],
    ["resources/icon-128.png", "usr/share/icons/hicolor/128x128/apps/rustyteams.png", "644"],
    ["resources/icon-64.png", "usr/share/icons/hicolor/64x64/apps/rustyteams.png", "644"],
    ["resources/icon-48.png", "usr/share/icons/hicolor/48x48/apps/rustyteams.png", "644"],
    ["resources/icon-32.png", "usr/share/icons/hicolor/32x32/apps/rustyteams.png", "644"],
    ["resources/icon-16.png", "usr/share/icons/hicolor/16x16/apps/rustyteams.png", "644"],
]
